# mesmer-openscmrunner

./: .gitattributes  .readthedocs.yaml  .readthedocs.yml  .zenodo.json  AUTHORS  CHANGELOG.rst  MANIFEST.in  Makefile  README.md  README.rst  environment.yml  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-cd-workflow.yml  test-pypi-install.yml
docs/source/: conf.py  index.rst  installation.rst  mesmer_openscmrunner.draw_realisations.rst
notebooks/: .gitignore  example-run.ipynb  get-magicc.sh  magicc-vs-obs.ipynb  magicc_global_output.nc  plot-esm-specific-realisations.ipynb  plot-probabilistic-realisations.ipynb  run-esm-specific-realisations.ipynb  run-probabilistic-realisations.ipynb
scripts/: test-install.py  upload-to-zenodo.sh
src/mesmer_openscmrunner/: __init__.py  _version.py
src/mesmer_openscmrunner/draw_realisations/: __init__.py
tests/: conftest.py  test_source_file_headers.py
tests/integration/: test_create_realisations.py
tests/test-data/magicc-rcmip-phase-1-output/: README.md  rcmip-phase-1_magicc7.1.0.beta-canesm5-r1i1p1f1_world_heat-content-ocean.csv  rcmip-phase-1_magicc7.1.0.beta-canesm5-r1i1p1f1_world_surface-air-temperature-change.csv
