[metadata]
name = mesmer-openscmrunner
keywords = MESMER, netCDF, python, climate, atmosphere, simple climate model, reduced complexity climate model, emulation, earth system model emulation
author = Zeb Nicholls, Lea Beusch, Mathias Hauser, Jared Lewis
author_email = zebedee.nicholls@climate-energy-college.org, lea.beusch@env.ethz.ch, mathias.hauser@env.ethz.ch, jared.lewis@climate-energy-college.org
license = GPLv3+

description = Coupling between MESMER and OpenSCM-Runner
description_file = README.rst
long_description_content_type = text/x-rst
long_description = file: README.rst

url = https://github.com/MESMER-group/mesmer-openscmrunner
project_urls =
    Bug Reports = https://github.com/MESMER-group/mesmer-openscmrunner/issues
    Source = https://github.com/MESMER-group/mesmer-openscmrunner
# full list at https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Intended Audience :: Developers
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >=3.7
install_requires =
    mesmer-emulator
    openscm-runner>=0.6
    scmdata
    xarray
    importlib-metadata; python_version < '3.8'

[options.packages.find]
where = src

[options.extras_require]
tests =
    codecov
    nbval
    pytest
    pytest-cov
    pytest-xdist

docs =
    ipython
    nbsphinx
    numpydoc
    sphinx
    sphinx-book-theme
    sphinx-copybutton

dev =
    bandit
    black
    black-nb
    flake8
    isort
    mypy
    nbdime
    openscm-zenodo
    pydocstyle
    pylint
    twine
    %(docs)s
    %(tests)s

[flake8]
max-line-length = 88
ignore = E203, E266, E501, W503, E231

[isort]
default_section = THIRDPARTY
# comma after multiline breaks like black:
include_trailing_comma = true
known_first_party = mesmer_openscmrunner
profile = black

[tool:pytest]
testpaths = tests

[pydocstyle]
# D213 - Multi-line docstring summary should start at the second line
# D402 - First line should not be the function’s “signature”
add_select = D213, D402
# D105 - Missing docstring in magic method
# D200 - One-line docstring should fit on one line with quotes
# D205 - 1 blank line required between summary line and description
# D400 - First line should end with a period
add_ignore = D200, D205, D400, D105
convention = numpy
inherit = false
match = (?!test_|_version).*\.py
